# personal-finance-manager

./: .env.exmaple  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: run.py
src/application/auth/: log_in_interactor.py  sign_up_interactor.py  token_interactor.py
src/application/categories/: create_category.py
src/application/common/: interactor.py
src/application/common/exceptions/: user.py
src/application/common/ports/: auth_manager.py  commiter.py  identity_provider.py  user_gateway.py
src/application/users/: get_me_interactor.py
src/domain/category/: entity.py  exception.py  service.py  validation.py  value_objects.py
src/domain/common/: tracker.py
src/domain/common/ports/: password_hasher.py
src/domain/transaction/: entity.py  exception.py  service.py  validation.py  value_objects.py
src/domain/user/: entity.py  exception.py  service.py  validation.py  value_objects.py
src/infrastructure/: bcrypt_password_hasher.py
src/infrastructure/database/: session.py  sqla_commiter.py  sqla_tracker.py
src/infrastructure/database/gateways/: auth_session.py  user.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: __init__.py  auth_session.py  base.py  category.py  transaction.py  user.py
src/infrastructure/http_auth/: http_auth_manager.py  jwt_token_processor.py  request_handler.py  user_identity_provider.py
src/infrastructure/http_auth/common/: auth_session.py  exceptions.py
src/presentation/api/auth/: log_in.py  sign_up.py  tokens.py
src/setup/: config.py
src/setup/di/: container.py  provider.py
tests/unit/application/: conftest.py
(+23 files in other folders)
